--- a/practice-css/style.css
+++ b/practice-css/style.css
@@ -20,7 +20,7 @@ h2 {
   font-size: 3.2em;
 }
 
-pli {
+p,li {
   font-size: 1.7em;
 }
 
@@ -35,7 +35,7 @@ header, footer {
 }
 
 h1, footer p {
-  margin: -70px;
+  margin: 0;
 }
 
 h1 {
